Ajout de la recherche de recettes par sous chaine d'ingrédients

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=
+copy.src.target=/home/profil/olejnicz5u/public_html/PhpProject1
 hostname=localhost
 port=8000
 run.as=INTERNAL
